--- a/mylove/client/pages/photos/index.wxml
+++ b/mylove/client/pages/photos/index.wxml
@@ -1,8 +1,8 @@
 <view class="container">
   <view class="swiper">
-    <swiper indicator-dots="false" autoplay="false" interval="5000" duration="1000">
+    <swiper indicator-dots="false" autoplay="false" interval="3000" duration="1000">
         <swiper-item wx:for="{{slideList}}" wx:key="slide" wx:id="id" wx:if="{{item.imageUrl}}">
-            <image src="{{item.imageUrl}}" class="slide-image" mode="aspectFill"/>
+            <image src="{{item.imageUrl}}" class="slide-image" mode="widthFix"/>
         </swiper-item>
     </swiper>
   </view>
